# haplopy

./: .gitignore  CHANGELOG.md  README.html  README.md  requirements.txt  setup.cfg  setup.py
haplopy/: __init__.py  datautils.py  main.py  model.py  multinomial.py  plot.py
haplopy/tests/: test_datautils.py  test_main.py  test_multinomial.py
