# ██╗  ██╗ █████╗ ██████╗ ██╗      ██████╗ ██████╗ ██╗   ██╗
# ██║  ██║██╔══██╗██╔══██╗██║     ██╔═══██╗██╔══██╗╚██╗ ██╔╝
# ███████║███████║██████╔╝██║     ██║   ██║██████╔╝ ╚████╔╝
# ██╔══██║██╔══██║██╔═══╝ ██║     ██║   ██║██╔═══╝   ╚██╔╝
# ██║  ██║██║  ██║██║     ███████╗╚██████╔╝██║        ██║
# ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝     ╚══════╝ ╚═════╝ ╚═╝        ╚═╝

[metadata]
version = 0.1.3
name = haplopy
author = Stratos Staboulis <stratos@stratokraft.fi>
maintainer = Stratos Staboulis <stratos@stratokraft.fi>
license = MIT
classifiers=
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = statistics, modeling, population genetics
description = Haplotype reconstruction from unphased diplotypes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/malmgrek/haplopy

[options]
packages = find:
install_requires =
    numpy>=1.10.0
    scipy>=0.13.0
python_requires >= 3.8

[options.extras_require]
test =
     pytest
dev =
    matplotlib
    ipython
